bundle all dlls on install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.21)
 
 project (Geoflow-bundle VERSION 22.2.1)
-# find_package(LASlib REQUIRED)
+
 add_subdirectory(geoflow)
 
 set(GF_PLUGIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/geoflow/cmake/gf_plugin.cpp.in)
@@ -10,7 +10,6 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}/geoflow/thirdparty/json/include
   ${CMAKE_CURRENT_BINARY_DIR}/include
 )
-# add_definitions(-DGF_SHADER_PATH=\"share\"${GF_SHH_FILE})
 
 add_subdirectory(plugins/gfp-basic3d)
 add_subdirectory(plugins/gfp-building-reconstruction)
@@ -22,9 +21,10 @@ if (WIN32)
   set(CPACK_GENERATOR NSIS)
   set(CPACK_NSIS_MODIFY_PATH ON)
   include(InstallRequiredSystemLibraries)
+
   INSTALL(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin COMPONENT Libraries)
 endif (WIN32)
-set(CPACK_PACKAGE_NAME "Geoflow")
+set(CPACK_PACKAGE_NAME "Geoflow-bundle")
 set(CPACK_PACKAGE_VENDOR "Ravi Peters")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Geoflow - Software")
 set(CPACK_PACKAGE_VERSION "22.2.1")
