properly set plugin directory in windows installer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,20 +17,35 @@ add_subdirectory(plugins/gfp-gdal)
 add_subdirectory(plugins/gfp-las)
 add_subdirectory(plugins/gfp-val3dity)
 
-if (WIN32)
-  set(CPACK_GENERATOR NSIS)
-  set(CPACK_NSIS_MODIFY_PATH ON)
-  include(InstallRequiredSystemLibraries)
-
-  INSTALL(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin COMPONENT Libraries)
-endif (WIN32)
-set(CPACK_PACKAGE_NAME "Geoflow-bundle")
-set(CPACK_PACKAGE_VENDOR "Ravi Peters")
+set(CPACK_PACKAGE_NAME "Geoflow")
+set(CPACK_PACKAGE_VENDOR "3DGI")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Geoflow - Software")
 set(CPACK_PACKAGE_VERSION "22.2.1")
 set(CPACK_PACKAGE_VERSION_MAJOR "22")
 set(CPACK_PACKAGE_VERSION_MINOR "2")
 set(CPACK_PACKAGE_VERSION_PATCH "1")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "Geoflow")
+set(CPACK_PACKAGE_DESCRIPTION "Geoflow is a geospatial 3D ETL tool.")
+set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/geoflow3d/geoflow-bundle")
+# set(CPACK_RESOURCE_FILE_WELCOME "{CMAKE_SOURCE_DIR}/geoflow/LICENSE")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/geoflow/COPYING")
+set(CPACK_MONOLITHIC_INSTALL TRUE)
+set(CPACK_PACKAGE_EXECUTABLES "geoflow;Geoflow")
+SET(CPACK_CREATE_DESKTOP_LINKS "geoflow" )
+set(CPACK_THREADS 0)
+
+if (WIN32)
+  set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/nsis ${CMAKE_MODULE_PATH})
+  set(CPACK_GENERATOR NSIS)
+  set(CPACK_NSIS_MODIFY_PATH ON)
+  # set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
+  # set(CPACK_NSIS_MUI_ICON ON)
+  set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/geoflow/apps/resources/geoflow.ico")
+  set(CPACK_NSIS_INSTALLED_ICON_NAME bin\\\\geoflow.exe)
+  include(InstallRequiredSystemLibraries)
+
+  INSTALL(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin COMPONENT Libraries)
+endif (WIN32)
+
 
 INCLUDE(CPack)
