add GF_INSTALL_ROOT env var for shader location

--- a/cmake/nsis/NSIS.template.in
+++ b/cmake/nsis/NSIS.template.in
@@ -740,6 +740,7 @@ Section "-Core installation"
   !include "winmessages.nsh"
   !define env_hkcu 'HKCU "Environment"'
   WriteRegExpandStr ${env_hkcu} GF_PLUGIN_FOLDER $INSTDIR\plugins
+  WriteRegExpandStr ${env_hkcu} GF_INSTALL_ROOT $INSTDIR
   SendMessage ${HWND_BROADCAST} ${WM_WININICHANGE} 0 "STR:Environment" /TIMEOUT=5000
 
 @CPACK_NSIS_EXTRA_INSTALL_COMMANDS@
@@ -844,6 +845,7 @@ Section "Uninstall"
 
   ; see https://nsis.sourceforge.io/Setting_Environment_Variables
   DeleteRegValue ${env_hkcu} GF_PLUGIN_FOLDER
+  DeleteRegValue ${env_hkcu} GF_INSTALL_ROOT
   SendMessage ${HWND_BROADCAST} ${WM_WININICHANGE} 0 "STR:Environment" /TIMEOUT=5000 \
 
 @CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS@
