--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "plugins/gfp-building-reconstruction"]
 	path = plugins/gfp-building-reconstruction
 	url = git@github.com:geoflow3d/gfp-building-reconstruction.git
+[submodule "buildtools/vcpkg"]
+	path = buildtools/vcpkg
+	url = git@github.com:microsoft/vcpkg.git
