--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,11 @@ jobs:
           token: ${{ secrets.GH_PAT }}
       - name: update vcpkg
         run: $VCPKG_ROOT/bootstrap-vcpkg.sh
-      - name: Build
+      - name: Make directories
+        run: mkdir $GITHUB_WORKSPACE/build
+      - name: CMake build
         run: |
-          mkdir build
-          cd build
+          cd $GITHUB_WORKSPACE/build
           cmake \
             -Dlaslib_DIR=$GITHUB_WORKSPACE/build/vcpkg_installed/$VCPKG_DEFAULT_TRIPLET/share/lastools/LASlib \
             -DGFP_WITH_LOD2=OFF \
@@ -50,4 +51,7 @@ jobs:
             -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
             ..
           cmake --build . --config Release
+      - name: CPack
+        run: |
+          cd $GITHUB_WORKSPACE/build
           cpack -C Release --verbose
