--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
             -DCMAKE_TOOLCHAIN_FILE=${{ matrix.vcpkg_installation_root }}/scripts/buildsystems/vcpkg.cmake \
             -S $GITHUB_WORKSPACE \
             -B $GITHUB_WORKSPACE/build
-          cmake --build ${{ github.workspace }}/build --config Release
+          cmake --build $GITHUB_WORKSPACE/build --config Release
       - name: CPack package executable
         run: |
           cd $GITHUB_WORKSPACE/build
