--- a/.github/workflows/test-grep.yml
+++ b/.github/workflows/test-grep.yml
@@ -32,7 +32,7 @@ jobs:
 
     steps:
       - name: get vcpkg version
-        run: echo "VCPKG_VERSION=$(vcpkg version | grep -P -o '(?<=Vcpkg package management program version ).*')" >> $GITHUB_ENV
+        run: echo "VCPKG_VERSION=$(vcpkg version | grep -o '[0-9].*')" >> $GITHUB_ENV
       - name: print vcpkg version
         run: echo $VCPKG_VERSION
       - name: print vcpkg version
