--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
             triplet: x64-linux
             vcpkg_installation_root: ${{ runner.VCPKG_INSTALLATION_ROOT }}
             exe_ext: deb
-            exe_os: ubuntu64
+            exe_os: ubuntu
           - os: macos-latest
             triplet: x64-osx
             vcpkg_installation_root: ${{ runner.VCPKG_INSTALLATION_ROOT }}
