--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ defaults:
 
 jobs:
   job:
-    name: ${{ matrix.os }}-${{ github.workflow }}-build
+    name: ${{ matrix.os }}-${{ github.workflow }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -45,7 +45,8 @@ jobs:
         run: |
           echo "vcpkg_version=$(vcpkg version | grep -o '[0-9].*')" >> $GITHUB_ENV
           echo "vcpkg_version=$(vcpkg version | grep -o '[0-9].*')"
-      - name: Remove vcpkg intallation directory
+      - name: Remove vcpkg installation directory
+        if: ${{ runner.os }} == Windows
         # There is a bug in the cache action and tar under windows cannot overwrite existing directories by default,
         # while in linux (and macos) that is the default behaviour.
         run: rm -rf ${{ matrix.vcpkg_installation_root }}
@@ -55,7 +56,7 @@ jobs:
           path: ${{ matrix.vcpkg_installation_root }}
           key: ${{ runner.os }}-${{ env.vcpkg_version }}-${{ hashFiles('vcpkg.json') }}
       - name: Refresh vcpkg
-        run: vcpkg update && vcpkg list
+        run: ${{ matrix.vcpkg_installation_root }}/bootstrap-vcpkg.sh
       # Need to use $GITHUB_WORKSPACE instead of ${{ github.workspace }}, because we are using shell and on windows
       # the ${{ github.workspace }} has back-slashes, while $GITHUB_WORKSPACE has forward-slashes
       - name: Make directories
