--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/download-artifact@v3
         with:
