test dependency again

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,6 @@ defaults:
 
 jobs:
   build:
-    name: Build-${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -87,7 +86,7 @@ jobs:
 #          cd $GITHUB_WORKSPACE/build
 #          cpack -C Release --verbose
       - name: test
-        run: cat build/Geoflow-22.2.1-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
+        run: touch build/Geoflow-22.2.1-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
       - name: Upload CPack artifact
         uses: actions/upload-artifact@v3
         with:
