--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,6 +107,6 @@ jobs:
 #        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: Geoflow ${{ github.ref }}
-          files: build_artifact/*
+          files: ${{ github.workspace }}/build_artifact/*
           draft: true
           prerelease: true
