--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,7 +95,6 @@ jobs:
           retention-days: 1
 
   release:
-    name: Release
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -107,6 +106,6 @@ jobs:
 #        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: Geoflow ${{ github.ref }}
-          files: ${{ github.workspace }}/build_artifact/*
+          files: build_artifact/Geoflow-*
           draft: true
           prerelease: true
