--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,7 +109,7 @@ jobs:
 #        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: Geoflow ${{ github.ref }}
-          files: ${{ github.workspace }}/build_artifact/Geoflow-*/Geoflow-*
+          files: ${{ github.workspace }}/build_artifact/*/*
           draft: true
           prerelease: true
           fail_on_unmatched_files: true
