--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,6 +87,9 @@ jobs:
 #          cpack -C Release --verbose
       - name: test
         run: touch build/Geoflow-22.2.1-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: ${{ github.workspace }}
       - name: Upload CPack artifact
         uses: actions/upload-artifact@v3
         with:
