--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
       - name: test
         run: touch build/Geoflow-22.2.1-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
       - name: Display structure of downloaded files
-        run: ls -R
+        run: ls
         working-directory: ${{ github.workspace }}
       - name: Upload CPack artifact
         uses: actions/upload-artifact@v3
@@ -116,3 +116,4 @@ jobs:
           draft: true
           prerelease: true
           fail_on_unmatched_files: true
+          token: ${{ secrets.GH_PAT }}
