--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           - os: macos-latest
             triplet: x64-osx
             vcpkg_installation_root: /usr/local/share/vcpkg
-            exe_ext: app # ? no clue
+            exe_ext: dmg # ? no clue
             exe_os: macos
 
     steps:
@@ -86,7 +86,7 @@ jobs:
 #          cd $GITHUB_WORKSPACE/build
 #          cpack -C Release --verbose
       - name: test
-        run: touch build/Geoflow-22.2.1-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
+        run: echo "The problem with caching vcpkg in this way as below, is that when the cache is restored to C:/vcpkg (on Win), for" > build/Geoflow-22.2.1-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
       - name: Display structure of downloaded files
         run: ls
         working-directory: ${{ github.workspace }}
@@ -108,6 +108,7 @@ jobs:
         run: ls -R
         working-directory: build_artifact
       - name: Create release and upload artifact
+# Release with an application bundle fails, because (.app) is actually a directory. As a workaround, the .app file can be zipped.
         uses: softprops/action-gh-release@v1
 #        if: startsWith(github.ref, 'refs/tags/')
         with:
