--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - build-cmake
+    tags:
+      - v*
     paths-ignore:
       - '**.md'
 
@@ -12,7 +14,7 @@ defaults:
     shell: bash
 
 jobs:
-  build:
+  build-exe:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -87,9 +89,6 @@ jobs:
 #          cpack -C Release --verbose
       - name: test
         run: echo "The problem with caching vcpkg in this way as below, is that when the cache is restored to C:/vcpkg (on Win), for" > build/Geoflow-22.2.1-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
-      - name: Display structure of downloaded files
-        run: ls
-        working-directory: ${{ github.workspace }}
       - name: Upload CPack artifact
         uses: actions/upload-artifact@v3
         with:
@@ -97,9 +96,21 @@ jobs:
           path: build/Geoflow-*-${{ matrix.exe_os }}.${{ matrix.exe_ext }}
           retention-days: 1
 
+  build-docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: build docker image
+        run: echo "The problem with caching vcpkg in this way as below, is that when the cache is restored to C:/vcpkg (on Win), for" > build/lod13tool-${{ github.ref_name }}-docker.tar
+      - name: Upload docker image
+        uses: actions/upload-artifact@v3
+        with:
+          name: lod13tool-docker.tar
+          path: build/lod13tool-${{ github.ref_name }}-docker.tar
+          retention-days: 1
+
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build-exe, build-docker]
     steps:
       - uses: actions/download-artifact@v3
         with:
@@ -112,7 +123,7 @@ jobs:
         uses: softprops/action-gh-release@v1
 #        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: Geoflow ${{ github.ref }}
+          name: Geoflow ${{ github.ref_name }}
           files: ${{ github.workspace }}/build_artifact/*/*
           draft: true
           prerelease: true
