--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,6 @@ name: Build and Release
 
 on:
   push:
-    branches:
-      - build-cmake
     tags:
       - v*
     paths-ignore:
@@ -100,12 +98,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: build docker image
-        run: echo "The problem with caching vcpkg in this way as below, is that when the cache is restored to C:/vcpkg (on Win), for" > build/lod13tool-${{ github.ref_name }}-docker.tar
+        run: echo "The problem with caching vcpkg in this way as below, is that when the cache is restored to C:/vcpkg (on Win), for" > build/lod13tool-${{ github.ref_name }}-docker.txt
       - name: Upload docker image
         uses: actions/upload-artifact@v3
         with:
-          name: lod13tool-docker.tar
-          path: build/lod13tool-${{ github.ref_name }}-docker.tar
+          name: lod13tool-docker.txt
+          path: build/lod13tool-${{ github.ref_name }}-docker.txt
           retention-days: 1
 
   release:
