--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,8 @@ jobs:
         run: ls -R
         working-directory: build_artifact
       - name: Create release and upload artifact
-# Release with an application bundle fails, because (.app) is actually a directory. As a workaround, the .app file can be zipped.
+# Release with an application bundle fails, because (.app) is actually a directory.
+# As a workaround, the .app file can be zipped.
         uses: softprops/action-gh-release@v1
 #        if: startsWith(github.ref, 'refs/tags/')
         with:
