--- a/.github/workflows/build-docker-base.yml
+++ b/.github/workflows/build-docker-base.yml
@@ -29,6 +29,7 @@ jobs:
           context: ./
           file: ./base.dockerfile
           builder: ${{ steps.buildx.outputs.name }}
+          build-args: JOBS=2
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/geoflow-bundle-base:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/geoflow-bundle-base:${{ steps.date.outputs.date }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/geoflow-bundle-base:latest
